--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     font-family: "Nerko One", serif;
     font-weight: 100;
     font-style: normal;
-
 }
 
 body {
@@ -30,18 +29,21 @@ body {
     /* box-shadow: 2px 2px 10px #000; */
     position: relative;
 }
-@property --angle{
+
+@property --angle {
     syntax: "<angle>";
     initial-value: 0deg;
     inherits: false;
 }
-.quote-box::after,.quote-box::before{
-    --angle:0deg;
+
+.quote-box::after,
+.quote-box::before {
+    --angle: 0deg;
     content: "";
     position: absolute;
     height: 100%;
     width: 100%;
-    background:conic-gradient(from var(--angle) ,#FF8383,#e6d701,#c7023a,#4f497a) ;
+    background: conic-gradient(from var(--angle), #FF8383, #e6d701, #c7023a, #4f497a);
     /* background: red; */
     top: -1%;
     left: -0.75%;
@@ -50,7 +52,8 @@ body {
     border-radius: 5px;
     animation: spin 3.5s linear infinite;
 }
-.quote-box::before{
+
+.quote-box::before {
     filter: blur(15px);
     opacity: 0.5;
 }
@@ -79,29 +82,33 @@ body {
 .quote-box blockquote {
     font-size: 1rem;
     padding: 0.5rem;
-
-
 }
-blockquote::before,blockquote::after{
+
+blockquote::before,
+blockquote::after {
     content: '"';
 }
-.quote-box span{
+
+.quote-box span {
     font-size: 1rem;
     float: right;
 }
-.quote-box span::before{
+
+.quote-box span::before {
     content: "---";
 
 }
-.quote-box div{
-    padding: 1.3rem ;
+
+.quote-box div {
+    padding: 1.3rem;
     margin-top: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
 }
-.quote-box div button{
+
+.quote-box div button {
     font-size: 0.7rem;
     font-weight: 600;
     padding: 10px 15px;
@@ -112,33 +119,37 @@ blockquote::before,blockquote::after{
     font-family: sans-serif;
     color: #fff;
     cursor: pointer;
-    border: 1px solid #000    ;
+    border: 1px solid #000;
     transition: all 0.3s;
-    &:hover{
+
+    &:hover {
         background-color: #fff;
         color: #000;
     }
 
 }
-.quote-box div button:nth-child(2){
-  margin-left: 10px;
-  background-color: #fff;
-  color: #000;
-  border: 1px solid #000    ;
-  cursor: pointer;
-  &:hover{
-    background-color:rgb(42, 160, 244) ;
-    color: #fff;
 
-  }
+.quote-box div button:nth-child(2) {
+    margin-left: 10px;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+    cursor: pointer;
+
+    &:hover {
+        background-color: rgb(42, 160, 244);
+        color: #fff;
+
+    }
 }
 
-@keyframes spin{
-    from{
-        --angle : 0deg;
+@keyframes spin {
+    from {
+        --angle: 0deg;
     }
-    to{
-        --angle : 360deg;
+
+    to {
+        --angle: 360deg;
     }
 
 }
